--- a/xcursor-viewer/Properties/Resources.resx
+++ b/xcursor-viewer/Properties/Resources.resx
@@ -118,16 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="cursor-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cursor-icon.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="app-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\app-icon.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="drive-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\drive-icon.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="drive-icon-black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\drive-icon-black.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="file-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\file-icon.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="file-icon-black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\file-icon-black.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="folder-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\folder-icon.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="folder-icon-black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\folder-icon-black.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="drive-icon-white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\drive-icon-white.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="file-icon-white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\file-icon-white.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="folder-icon-white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\folder-icon-white.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
